Fractional positions (#20)
* WIP: adding fractional positions

* somekind working version

* works!

* changes for positions

* refactoring

* refactored positions of hand shapes

* fixed some bugs with min distances

* fixed bugged position

* refactoring

* working version

* fixes

* fixed template types

* fixed vocal highlight length

* fixed error with negative lengths

* fixed exporting hand shapes to RS XML

* fixed loading tone names

* removed unnecessary annotation

* fixed note positions in RS XML import

* features and fixes for 0.16

* version change

* fixed GP5 trills, fixed calculating min note end position