@@ -1,32 +1,33 @@
 package log.charter.gui.chartPanelDrawers.instruments.guitar;
 
 import static log.charter.util.CollectionUtils.filter;
-import static log.charter.util.ScalingUtils.timeToX;
-import static log.charter.util.ScalingUtils.xToTime;
+import static log.charter.util.ScalingUtils.positionToX;
+import static log.charter.util.ScalingUtils.xToPosition;
 
 import java.awt.Graphics2D;
+import java.util.List;
 import java.util.Map;
+import java.util.Set;
 
 import log.charter.data.song.EventPoint;
 import log.charter.data.song.Phrase;
+import log.charter.data.song.position.FractionalPosition;
 import log.charter.data.types.PositionType;
+import log.charter.gui.chartPanelDrawers.data.FrameData;
 import log.charter.gui.chartPanelDrawers.data.HighlightData;
 import log.charter.gui.chartPanelDrawers.data.HighlightData.HighlightPosition;
 import log.charter.gui.chartPanelDrawers.instruments.guitar.highway.HighwayDrawer;
-import log.charter.util.collections.ArrayList2;
-import log.charter.util.collections.HashMap2;
-import log.charter.util.collections.HashSet2;
 
 public class GuitarEventPointsDrawer {
-	private static EventPoint findCurrentSection(final ArrayList2<EventPoint> eventPoints, final int time) {
-		final ArrayList2<EventPoint> sections = filter(eventPoints, //
-				eventPoint -> eventPoint.section != null && eventPoint.position() < time, ArrayList2::new);
+	private static EventPoint findCurrentSection(final List<EventPoint> eventPoints, final FractionalPosition time) {
+		final List<EventPoint> sections = filter(eventPoints, //
+				eventPoint -> eventPoint.section != null && eventPoint.compareTo(time) < 0);
 
-		return sections.isEmpty() ? null : sections.getLast();
+		return sections.isEmpty() ? null : sections.get(sections.size() - 1);
 	}
 
 	private static void drawCurrentSection(final Graphics2D g, final HighwayDrawer highwayDrawer,
-			final ArrayList2<EventPoint> eventPoints, final int time, final int nextEventPointX) {
+			final List<EventPoint> eventPoints, final FractionalPosition time, final int nextEventPointX) {
 		final EventPoint section = findCurrentSection(eventPoints, time);
 		if (section == null) {
 			return;
@@ -36,7 +37,7 @@ public class GuitarEventPointsDrawer {
 	}
 
 	private static void drawCurrentSection(final Graphics2D g, final HighwayDrawer highwayDrawer,
-			final ArrayList2<EventPoint> eventPoints, final int time) {
+			final List<EventPoint> eventPoints, final FractionalPosition time) {
 		final EventPoint section = findCurrentSection(eventPoints, time);
 		if (section == null) {
 			return;
@@ -45,15 +46,15 @@ public class GuitarEventPointsDrawer {
 		highwayDrawer.addCurrentSection(g, section.section);
 	}
 
-	private static EventPoint findCurrentPhrase(final ArrayList2<EventPoint> eventPoints, final int time) {
-		final ArrayList2<EventPoint> sections = filter(eventPoints, //
-				eventPoint -> eventPoint.hasPhrase() && eventPoint.position() < time, ArrayList2::new);
+	private static EventPoint findCurrentPhrase(final List<EventPoint> eventPoints, final FractionalPosition time) {
+		final List<EventPoint> sections = filter(eventPoints, //
+				eventPoint -> eventPoint.hasPhrase() && eventPoint.compareTo(time) < 0);
 
-		return sections.isEmpty() ? null : sections.getLast();
+		return sections.isEmpty() ? null : sections.get(sections.size() - 1);
 	}
 
 	private static void drawCurrentPhrase(final Graphics2D g, final HighwayDrawer highwayDrawer,
-			final Map<String, Phrase> phrases, final ArrayList2<EventPoint> eventPoints, final int time,
+			final Map<String, Phrase> phrases, final List<EventPoint> eventPoints, final FractionalPosition time,
 			final int nextEventPointX) {
 		final EventPoint section = findCurrentPhrase(eventPoints, time);
 		if (section == null) {
@@ -64,7 +65,7 @@ public class GuitarEventPointsDrawer {
 	}
 
 	private static void drawCurrentPhrase(final Graphics2D g, final HighwayDrawer highwayDrawer,
-			final Map<String, Phrase> phrases, final ArrayList2<EventPoint> eventPoints, final int time) {
+			final Map<String, Phrase> phrases, final List<EventPoint> eventPoints, final FractionalPosition time) {
 		final EventPoint section = findCurrentPhrase(eventPoints, time);
 		if (section == null) {
 			return;
@@ -80,22 +81,25 @@ public class GuitarEventPointsDrawer {
 		}
 
 		for (final HighlightPosition highlightPosition : highlightData.highlightedNonIdPositions) {
-			final int x = timeToX(highlightPosition.position, time);
+			final int x = positionToX(highlightPosition.position, time);
 			highwayDrawer.addEventPointHighlight(x);
 		}
 	}
 
-	public static void addEventPoints(final Graphics2D g, final int panelWidth, final HighwayDrawer highwayDrawer,
-			final ArrayList2<EventPoint> eventPoints, final HashMap2<String, Phrase> phrases, final int time,
-			final HashSet2<Integer> selectedIds, final HighlightData highlightData) {
-		final int highlightId = highlightData.getId(PositionType.EVENT_POINT);
-		final int leftScreenEdgeTime = xToTime(0, time);
+	public static void addEventPoints(final FrameData frameData, final int panelWidth,
+			final HighwayDrawer highwayDrawer) {
+		final List<EventPoint> eventPoints = frameData.arrangement.eventPoints;
+		final Map<String, Phrase> phrases = frameData.arrangement.phrases;
+		final Set<Integer> selectedIds = frameData.selection.getSelectedIdsSet(PositionType.EVENT_POINT);
+		final int highlightId = frameData.highlightData.getId(PositionType.EVENT_POINT);
+		final FractionalPosition leftScreenEdgeTime = FractionalPosition.fromTime(frameData.beats,
+				xToPosition(0, frameData.time));
 
 		boolean currentSectionDrawn = false;
 		boolean currentPhraseDrawn = false;
-		for (int i = 0; i < eventPoints.size(); i++) {
+		for (int i = 0; i < frameData.arrangement.eventPoints.size(); i++) {
 			final EventPoint eventPoint = eventPoints.get(i);
-			final int x = timeToX(eventPoint.position(), time);
+			final int x = positionToX(eventPoint.position(frameData.beats), frameData.time);
 			if (x < 0) {
 				continue;
 			}
@@ -105,23 +109,24 @@ public class GuitarEventPointsDrawer {
 
 			final boolean selected = selectedIds.contains(i);
 			final boolean highlighted = i == highlightId;
-			highwayDrawer.addEventPoint(g, eventPoint, phrases.get(eventPoint.phrase), x, selected, highlighted);
+			highwayDrawer.addEventPoint(frameData.g, eventPoint, phrases.get(eventPoint.phrase), x, selected,
+					highlighted);
 			if (eventPoint.section != null && !currentSectionDrawn) {
-				drawCurrentSection(g, highwayDrawer, eventPoints, leftScreenEdgeTime, x);
+				drawCurrentSection(frameData.g, highwayDrawer, eventPoints, leftScreenEdgeTime, x);
 				currentSectionDrawn = true;
 			}
 			if (eventPoint.phrase != null && !currentPhraseDrawn) {
-				drawCurrentPhrase(g, highwayDrawer, phrases, eventPoints, leftScreenEdgeTime, x);
+				drawCurrentPhrase(frameData.g, highwayDrawer, phrases, eventPoints, leftScreenEdgeTime, x);
 				currentPhraseDrawn = true;
 			}
 		}
 		if (!currentSectionDrawn) {
-			drawCurrentSection(g, highwayDrawer, eventPoints, leftScreenEdgeTime);
+			drawCurrentSection(frameData.g, highwayDrawer, eventPoints, leftScreenEdgeTime);
 		}
 		if (!currentPhraseDrawn) {
-			drawCurrentPhrase(g, highwayDrawer, phrases, eventPoints, leftScreenEdgeTime);
+			drawCurrentPhrase(frameData.g, highwayDrawer, phrases, eventPoints, leftScreenEdgeTime);
 		}
 
-		drawHighlightedPositions(highwayDrawer, time, highlightData);
+		drawHighlightedPositions(highwayDrawer, frameData.time, frameData.highlightData);
 	}
 }
