@@ -2,20 +2,31 @@ package log.charter.services.data;
 
 import static java.lang.Math.max;
 import static java.lang.Math.min;
-import static log.charter.data.song.position.IConstantPosition.findLastBefore;
-import static log.charter.util.CollectionUtils.findFirstAfter;
+import static log.charter.util.CollectionUtils.firstAfter;
+import static log.charter.util.CollectionUtils.lastBefore;
 
+import java.util.ArrayList;
 import java.util.List;
+import java.util.Map;
+import java.util.Optional;
 
 import log.charter.data.ChartData;
 import log.charter.data.song.Arrangement;
+import log.charter.data.song.BeatsMap.ImmutableBeatsMap;
 import log.charter.data.song.Level;
-import log.charter.data.song.position.IConstantPosition;
-import log.charter.data.song.position.Position;
+import log.charter.data.song.position.FractionalPosition;
+import log.charter.data.song.position.fractional.IConstantFractionalPosition;
+import log.charter.data.song.position.time.ConstantPosition;
+import log.charter.data.song.position.time.IConstantPosition;
+import log.charter.data.song.position.time.Position;
+import log.charter.data.song.position.virtual.IVirtualConstantPosition;
+import log.charter.services.Action;
 import log.charter.services.editModes.EditMode;
 import log.charter.services.editModes.ModeManager;
 import log.charter.services.mouseAndKeyboard.KeyboardHandler;
-import log.charter.util.collections.ArrayList2;
+import log.charter.util.CollectionUtils;
+import log.charter.util.ScalingUtils;
+import log.charter.util.collections.Pair;
 
 public class ChartTimeHandler {
 	private static class MaxPositionAccumulator {
@@ -25,9 +36,19 @@ public class ChartTimeHandler {
 			maxTime = max(maxTime, time);
 		}
 
-		public void add(final ArrayList2<? extends IConstantPosition> positions) {
+		public void add(final List<? extends IConstantPosition> positions) {
 			if (!positions.isEmpty()) {
-				maxTime = max(maxTime, positions.getLast().position());
+				maxTime = max(maxTime, positions.get(positions.size() - 1).position());
+			}
+		}
+
+		public void addFractional(final ImmutableBeatsMap beats,
+				final List<? extends IConstantFractionalPosition> positions) {
+			if (!positions.isEmpty()) {
+				try {
+					maxTime = max(maxTime, positions.get(positions.size() - 1).position().getPosition(beats));
+				} catch (final Exception e) {
+				}
 			}
 		}
 	}
@@ -38,7 +59,9 @@ public class ChartTimeHandler {
 	private ProjectAudioHandler projectAudioHandler;
 
 	private double time = 0;
+	private FractionalPosition fractionalTime = new FractionalPosition();
 	private double nextTime = 0;
+	private FractionalPosition nextFractionalTime = new FractionalPosition();
 
 	public double nextTime() {
 		return nextTime;
@@ -46,6 +69,42 @@ public class ChartTimeHandler {
 
 	public void nextTime(final double t) {
 		nextTime = max(0, min(maxTime(), t));
+		nextFractionalTime = FractionalPosition.fromTime(chartData.beats(), (int) nextTime);
+	}
+
+	public void nextTime(final IConstantPosition t) {
+		nextTime(t.position());
+	}
+
+	public FractionalPosition nextFractionalTime() {
+		return nextFractionalTime;
+	}
+
+	public void nextFractionalTime(final IConstantFractionalPosition t) {
+		nextFractionalTime = t.position();
+		nextTime = nextFractionalTime.getPosition(chartData.beats());
+	}
+
+	public void nextTime(final IVirtualConstantPosition p) {
+		if (p.isFraction()) {
+			nextFractionalTime(p.asConstantFraction());
+		} else {
+			nextTime(p.asConstantPosition());
+		}
+	}
+
+	public void moveTo(final Integer arrangementId, final Integer levelId, final IVirtualConstantPosition time) {
+		if (arrangementId != null) {
+			modeManager.setArrangement(arrangementId);
+		}
+
+		if (levelId != null) {
+			modeManager.setLevel(levelId);
+		}
+
+		if (time != null) {
+			nextTime(time);
+		}
 	}
 
 	public double preciseTime() {
@@ -56,21 +115,25 @@ public class ChartTimeHandler {
 		return (int) time;
 	}
 
-	public int maxTime() {
+	public FractionalPosition timeFractional() {
+		return fractionalTime;
+	}
+
+	public int maxNonBeatTime() {
 		final MaxPositionAccumulator accumulator = new MaxPositionAccumulator();
 
 		if (modeManager.getMode() != EditMode.EMPTY) {
+			final ImmutableBeatsMap beats = chartData.beats();
 			accumulator.add(audioTime());
-			accumulator.add(chartData.songChart.beatsMap.beats);
 
 			for (final Arrangement arrangement : chartData.songChart.arrangements) {
-				accumulator.add(arrangement.eventPoints);
-				accumulator.add(arrangement.toneChanges);
+				accumulator.addFractional(beats, arrangement.eventPoints);
+				accumulator.addFractional(beats, arrangement.toneChanges);
 
 				for (final Level level : arrangement.levels) {
-					accumulator.add(level.anchors);
-					accumulator.add(level.sounds);
-					accumulator.add(level.handShapes);
+					accumulator.addFractional(beats, level.anchors);
+					accumulator.addFractional(beats, level.sounds);
+					accumulator.addFractional(beats, level.handShapes);
 				}
 			}
 		}
@@ -78,64 +141,131 @@ public class ChartTimeHandler {
 		return accumulator.maxTime;
 	}
 
+	public int maxTime() {
+		final MaxPositionAccumulator accumulator = new MaxPositionAccumulator();
+
+		if (modeManager.getMode() != EditMode.EMPTY) {
+			final ImmutableBeatsMap beats = chartData.beats();
+			accumulator.add(audioTime());
+			accumulator.add(beats);
+
+			for (final Arrangement arrangement : chartData.songChart.arrangements) {
+				accumulator.addFractional(beats, arrangement.eventPoints);
+				accumulator.addFractional(beats, arrangement.toneChanges);
+
+				for (final Level level : arrangement.levels) {
+					accumulator.addFractional(beats, level.anchors);
+					accumulator.addFractional(beats, level.sounds);
+					accumulator.addFractional(beats, level.handShapes);
+				}
+			}
+		}
+
+		return accumulator.maxTime;
+	}
+
+	public FractionalPosition maxTimeFractional() {
+		return FractionalPosition.fromTime(chartData.beats(), maxTime());
+	}
+
 	public int audioTime() {
 		return projectAudioHandler.getAudio().msLength();
 	}
 
-	private ArrayList2<? extends IConstantPosition> getCurrentItems() {
+	public int positionToX(final int position) {
+		return ScalingUtils.positionToX(position, time());
+	}
+
+	public int xToPosition(final int x) {
+		return ScalingUtils.xToPosition(x, time());
+	}
+
+	private List<? extends IVirtualConstantPosition> getCurrentItems() {
 		switch (modeManager.getMode()) {
 			case GUITAR:
-				return chartData.getCurrentArrangementLevel().sounds;
+				return chartData.currentSounds();
 			case TEMPO_MAP:
 				return chartData.songChart.beatsMap.beats;
 			case VOCALS:
 				return chartData.songChart.vocals.vocals;
 			default:
-				return new ArrayList2<>();
+				return new ArrayList<>();
 		}
-	}
-
-	private int getPrevious(final List<? extends IConstantPosition> positions) {
-		final IConstantPosition position = findLastBefore(positions, time());
-		if (position == null) {
-			return time();
-		}
-
-		return position.position();
 	}
 
 	public void moveToBeginning() {
 		nextTime(0);
 	}
 
-	public void moveToPreviousBeat() {
-		nextTime(getPrevious(chartData.songChart.beatsMap.beats));
-	}
-
 	public void moveToPreviousGrid() {
-		nextTime(chartData.songChart.beatsMap.getPositionWithRemovedGrid(time(), 1));
+		nextTime(chartData.beats().addGrid(new Position(time()), -1));
 	}
 
+	private IConstantPosition getPrevious(final List<? extends IConstantPosition> positions) {
+		final IConstantPosition timePosition = new ConstantPosition(time());
+		final IConstantPosition position = lastBefore(positions, timePosition).find();
+		if (position == null) {
+			return timePosition;
+		}
+
+		return position;
+	}
+
+	private IConstantFractionalPosition getPreviousFractional(
+			final List<? extends IConstantFractionalPosition> positions) {
+		final IConstantFractionalPosition timePosition = FractionalPosition.fromTime(chartData.beats(), time());
+		final IConstantFractionalPosition position = lastBefore(positions, timePosition).find();
+		if (position == null) {
+			return timePosition;
+		}
+
+		return position;
+	}
+
+	public void moveToPreviousBeat() {
+		nextTime(getPrevious(chartData.beats()));
+	}
+
+	@SuppressWarnings("unchecked")
 	public void moveToPreviousItem() {
-		nextTime(getPrevious(getCurrentItems()));
+		final List<? extends IVirtualConstantPosition> currentItems = getCurrentItems();
+		if (currentItems.isEmpty()) {
+			return;
+		}
+
+		if (currentItems.get(0).isFraction()) {
+			nextFractionalTime(getPreviousFractional((List<? extends IConstantFractionalPosition>) currentItems));
+		} else {
+			nextTime(getPrevious((List<? extends IConstantPosition>) currentItems));
+		}
 	}
 
 	public void moveToFirstItem() {
-		final List<? extends IConstantPosition> items = getCurrentItems();
+		final List<? extends IVirtualConstantPosition> items = getCurrentItems();
 		if (items.isEmpty()) {
 			return;
 		}
 
-		nextTime(items.get(0).position());
+		nextTime(items.get(0));
 	}
 
 	private int getNext(final List<? extends IConstantPosition> positions) {
-		final IConstantPosition position = findFirstAfter(positions, new Position(time()));
+		final IConstantPosition position = firstAfter(positions, new Position(time())).find();
 		if (position == null) {
 			return time();
 		}
 
 		return position.position();
+	}
+
+	private IConstantFractionalPosition getNextFractional(final List<? extends IConstantFractionalPosition> positions) {
+		final IConstantFractionalPosition timePosition = FractionalPosition.fromTime(chartData.beats(), time());
+		final IConstantFractionalPosition position = firstAfter(positions, timePosition).find();
+		if (position == null) {
+			return timePosition;
+		}
+
+		return position;
 	}
 
 	public void moveToEnd() {
@@ -143,40 +273,60 @@ public class ChartTimeHandler {
 	}
 
 	public void moveToNextBeat() {
-		nextTime(getNext(chartData.songChart.beatsMap.beats));
+		nextTime(getNext(chartData.beats()));
 	}
 
 	public void moveToNextGrid() {
-		nextTime(chartData.songChart.beatsMap.getPositionWithAddedGrid(time(), 1));
+		nextTime(chartData.beats().addGrid(new Position(time()), 1));
 	}
 
+	@SuppressWarnings("unchecked")
 	public void moveToNextItem() {
-		nextTime(getNext(getCurrentItems()));
+		final List<? extends IVirtualConstantPosition> currentItems = getCurrentItems();
+		if (currentItems.isEmpty()) {
+			return;
+		}
+
+		if (currentItems.get(0).isFraction()) {
+			nextFractionalTime(getNextFractional((List<? extends IConstantFractionalPosition>) currentItems));
+		} else {
+			nextTime(getNext((List<? extends IConstantPosition>) currentItems));
+		}
 	}
 
 	public void moveToLastItem() {
-		final ArrayList2<? extends IConstantPosition> items = getCurrentItems();
+		final List<? extends IVirtualConstantPosition> items = getCurrentItems();
 		if (items.isEmpty()) {
 			return;
 		}
 
-		nextTime(items.getLast().position());
+		nextTime(items.get(items.size() - 1));
+	}
+
+	private static final Map<Action, Double> moveSpeeds = CollectionUtils.toMap(//
+			new Pair<>(Action.FAST_FORWARD, 32.0), //
+			new Pair<>(Action.FAST_BACKWARD, -32.0), //
+			new Pair<>(Action.MOVE_FORWARD, 4.0), //
+			new Pair<>(Action.MOVE_BACKWARD, -4.0), //
+			new Pair<>(Action.SLOW_FORWARD, 0.25), //
+			new Pair<>(Action.SLOW_BACKWARD, -0.25));
+
+	private void moveFromArrows(final double frameTime) {
+		final Optional<Action> heldAction = keyboardHandler.heldAction();
+		if (heldAction.filter(moveSpeeds::containsKey).isEmpty()) {
+			return;
+		}
+
+		final double speed = moveSpeeds.get(heldAction.get()) * frameTime * 1000;
+		nextTime(time() + speed);
 	}
 
 	public void frame(final double frameTime) {
-		double speed = keyboardHandler.heldAction()//
-				.map(action -> switch (action) {
-					case FAST_BACKWARD -> -32.0;
-					case FAST_FORWARD -> 32.0;
-					case MOVE_BACKWARD -> -4.0;
-					case MOVE_FORWARD -> 4.0;
-					case SLOW_BACKWARD -> -0.25;
-					case SLOW_FORWARD -> 0.25;
-					default -> 0.0;
-				}).orElse(0.0);
-		speed *= frameTime * 1000;
+		moveFromArrows(frameTime);
 
-		time = max(0, min(maxTime(), nextTime + speed));
+		time = nextTime;
+		fractionalTime = nextFractionalTime;
 		nextTime = time;
+		nextFractionalTime = fractionalTime;
 	}
 }
