@@ -1,22 +1,27 @@
 package log.charter.services.data.copy;
 
-import static java.util.stream.Collectors.toCollection;
-import static log.charter.data.song.position.IConstantPosition.findFirstIdAfterEqual;
-import static log.charter.data.song.position.IConstantPosition.findLastIdBeforeEqual;
+import static log.charter.util.CollectionUtils.getFromTo;
+import static log.charter.util.CollectionUtils.map;
 
+import java.util.List;
+import java.util.Map;
 import java.util.function.Function;
+import java.util.stream.Collectors;
 
 import com.thoughtworks.xstream.io.StreamException;
 
 import log.charter.data.ChartData;
 import log.charter.data.song.Arrangement;
-import log.charter.data.song.Beat;
-import log.charter.data.song.BeatsMap;
+import log.charter.data.song.BeatsMap.ImmutableBeatsMap;
 import log.charter.data.song.ChordTemplate;
+import log.charter.data.song.EventPoint;
 import log.charter.data.song.HandShape;
 import log.charter.data.song.Phrase;
 import log.charter.data.song.notes.ChordOrNote;
-import log.charter.data.song.position.IPosition;
+import log.charter.data.song.position.FractionalPosition;
+import log.charter.data.song.position.fractional.IConstantFractionalPosition;
+import log.charter.data.song.position.fractional.IConstantFractionalPositionWithEnd;
+import log.charter.data.song.position.virtual.IVirtualConstantPosition;
 import log.charter.data.types.PositionType;
 import log.charter.data.undoSystem.UndoSystem;
 import log.charter.gui.CharterFrame;
@@ -34,24 +39,21 @@ import log.charter.services.data.copy.data.HandShapesCopyData;
 import log.charter.services.data.copy.data.ICopyData;
 import log.charter.services.data.copy.data.SoundsCopyData;
 import log.charter.services.data.copy.data.VocalsCopyData;
-import log.charter.services.data.copy.data.positions.CopiedAnchorPosition;
-import log.charter.services.data.copy.data.positions.CopiedArrangementEventsPointPosition;
-import log.charter.services.data.copy.data.positions.CopiedHandShapePosition;
-import log.charter.services.data.copy.data.positions.CopiedPosition;
-import log.charter.services.data.copy.data.positions.CopiedSoundPosition;
-import log.charter.services.data.copy.data.positions.CopiedToneChangePosition;
+import log.charter.services.data.copy.data.positions.Copied;
+import log.charter.services.data.copy.data.positions.CopiedAnchor;
+import log.charter.services.data.copy.data.positions.CopiedEventPoint;
+import log.charter.services.data.copy.data.positions.CopiedHandShape;
+import log.charter.services.data.copy.data.positions.CopiedSound;
+import log.charter.services.data.copy.data.positions.CopiedToneChange;
 import log.charter.services.data.copy.data.positions.CopiedVocalPosition;
-import log.charter.services.data.selection.Selection;
-import log.charter.services.data.selection.SelectionAccessor;
+import log.charter.services.data.selection.ISelectionAccessor;
 import log.charter.services.data.selection.SelectionManager;
 import log.charter.services.editModes.EditMode;
 import log.charter.services.editModes.ModeManager;
-import log.charter.util.collections.ArrayList2;
-import log.charter.util.collections.HashMap2;
 
 public class CopyManager {
-	private static interface CopiedPositionMaker<T extends IPosition, V extends CopiedPosition<T>> {
-		V make(BeatsMap beatsMap, int basePosition, double basePositionInBeats, T position);
+	private static interface CopyMakerSimple<T, V extends Copied<T>> {
+		V make(FractionalPosition basePosition, T item);
 	}
 
 	private ChartData chartData;
@@ -61,157 +63,137 @@ public class CopyManager {
 	private SelectionManager selectionManager;
 	private UndoSystem undoSystem;
 
-	private <T extends IPosition, V extends CopiedPosition<T>> ArrayList2<V> makeCopy(final ArrayList2<T> positions,
-			final int basePosition, final double basePositionInBeats,
-			final CopiedPositionMaker<T, V> copiedPositionMaker) {
-		final BeatsMap beatsMap = chartData.songChart.beatsMap;
-
-		return positions
-				.map(position -> copiedPositionMaker.make(beatsMap, basePosition, basePositionInBeats, position));
+	private <T extends IConstantFractionalPosition, V extends Copied<T>> List<V> makeCopy(final List<T> selected,
+			final CopyMakerSimple<T, V> copyMaker) {
+		final FractionalPosition basePosition = selected.get(0).position();
+		return map(selected, e -> copyMaker.make(basePosition, e));
 	}
 
-	private <T extends IPosition, V extends CopiedPosition<T>> ArrayList2<V> makeCopy(
-			final ArrayList2<Selection<T>> selectedPositions, final CopiedPositionMaker<T, V> copiedPositionMaker) {
-		final BeatsMap beatsMap = chartData.songChart.beatsMap;
-		final int basePosition = selectedPositions.get(0).selectable.position();
-		final double basePositionInBeats = beatsMap.getPositionInBeats(basePosition);
-
-		return makeCopy(selectedPositions.map(selected -> selected.selectable), basePosition, basePositionInBeats,
-				copiedPositionMaker);
+	private <T extends IConstantFractionalPosition, V extends Copied<T>> List<V> copyPositionsFromTo(
+			final FractionalPosition from, final FractionalPosition to, final List<T> positions,
+			final CopyMakerSimple<T, V> copyMaker) {
+		return map(getFromTo(positions, from, to), p -> copyMaker.make(from, p));
 	}
 
-	private <T extends IPosition, V extends CopiedPosition<T>> ArrayList2<V> copyPositionsFromTo(final int from,
-			final int to, final double basePositionInBeats, final ArrayList2<T> positions,
-			final CopiedPositionMaker<T, V> copiedPositionMaker) {
-		final BeatsMap beatsMap = chartData.songChart.beatsMap;
-
-		int fromId = findFirstIdAfterEqual(positions, from);
-		if (fromId == -1) {
-			fromId = positions.size();
-		}
-		int toId = findLastIdBeforeEqual(positions, to);
-		if (toId == -1) {
-			toId = -1;
-		}
-		if (fromId > toId) {
-			return new ArrayList2<>();
-		}
-
-		return positions.stream().skip(fromId).limit(toId - fromId + 1)//
-				.map(position -> copiedPositionMaker.make(beatsMap, from, basePositionInBeats, position))//
-				.collect(toCollection(ArrayList2::new));
-	}
-
-	private FullCopyData getFullCopyData(final int from, final int to) {
+	private FullCopyData getFullCopyData(final IVirtualConstantPosition fromVirtual,
+			final IVirtualConstantPosition toVirtual) {
 		if (modeManager.getMode() != EditMode.GUITAR) {
 			return null;
 		}
 
-		final Arrangement arrangement = chartData.getCurrentArrangement();
-		final BeatsMap beatsMap = chartData.songChart.beatsMap;
-		final double basePositionInBeats = beatsMap.getPositionInBeats(from);
+		final Arrangement arrangement = chartData.currentArrangement();
+		final ImmutableBeatsMap beats = chartData.beats();
+		final FractionalPosition from = fromVirtual.toFraction(beats).position();
+		final FractionalPosition to = toVirtual.toFraction(beats).position();
 
-		final HashMap2<String, Phrase> copiedPhrases = arrangement.phrases.map(phraseName -> phraseName, Phrase::new);
-		final ArrayList2<CopiedArrangementEventsPointPosition> copiedArrangementEventsPoints = copyPositionsFromTo(from,
-				to, basePositionInBeats, arrangement.eventPoints, CopiedArrangementEventsPointPosition::new);
-		final ArrayList2<ChordTemplate> copiedChordTemplates = chartData.getCurrentArrangement().chordTemplates
-				.map(ChordTemplate::new);
-		final ArrayList2<CopiedToneChangePosition> copiedToneChanges = copyPositionsFromTo(from, to,
-				basePositionInBeats, arrangement.toneChanges, CopiedToneChangePosition::new);
-		final ArrayList2<CopiedAnchorPosition> copiedAnchors = copyPositionsFromTo(from, to, basePositionInBeats,
-				chartData.getCurrentArrangementLevel().anchors, CopiedAnchorPosition::new);
-		final ArrayList2<CopiedSoundPosition> copiedSounds = copyPositionsFromTo(from, to, basePositionInBeats,
-				chartData.getCurrentArrangementLevel().sounds, CopiedSoundPosition::new);
-		final ArrayList2<CopiedHandShapePosition> copiedHandShapes = copyPositionsFromTo(from, to, basePositionInBeats,
-				chartData.getCurrentArrangementLevel().handShapes, CopiedHandShapePosition::new);
+		final Map<String, Phrase> copiedPhrases = map(arrangement.phrases, k -> k, Phrase::new);
+		final List<CopiedEventPoint> copiedArrangementEventsPoints = copyPositionsFromTo(from, to,
+				arrangement.eventPoints, CopiedEventPoint::new);
+		final List<ChordTemplate> copiedChordTemplates = map(chartData.currentChordTemplates(), ChordTemplate::new);
+		final List<CopiedToneChange> copiedToneChanges = copyPositionsFromTo(from, to, arrangement.toneChanges,
+				CopiedToneChange::new);
+		final List<CopiedAnchor> copiedAnchors = copyPositionsFromTo(from, to,
+				chartData.currentArrangementLevel().anchors, CopiedAnchor::new);
+		final List<CopiedSound> copiedSounds = copyPositionsFromTo(from, to, chartData.currentSounds(),
+				CopiedSound::copy);
+		final List<CopiedHandShape> copiedHandShapes = copyPositionsFromTo(from, to, chartData.currentHandShapes(),
+				CopiedHandShape::new);
 
 		return new FullGuitarCopyData(copiedPhrases, copiedArrangementEventsPoints, copiedChordTemplates,
 				copiedToneChanges, copiedAnchors, copiedSounds, copiedHandShapes);
 	}
 
 	private CopyData getGuitarCopyDataEventPoints() {
-		final SelectionAccessor<Beat> selectedBeatsAccessor = selectionManager
-				.getSelectedAccessor(PositionType.EVENT_POINT);
+		final List<EventPoint> selected = selectionManager.getSelectedElements(PositionType.EVENT_POINT);
+		final FractionalPosition from = selected.get(0).position();
+		final FractionalPosition to = selected.get(selected.size() - 1).position();
+		final Arrangement arrangement = chartData.currentArrangement();
 
-		final ArrayList2<Selection<Beat>> selectedBeats = selectedBeatsAccessor.getSortedSelected();
-		final int from = selectedBeats.get(0).selectable.position();
-		final int to = selectedBeats.getLast().selectable.position();
-		final double basePositionInBeats = chartData.songChart.beatsMap.getPositionInBeats(from);
-		final Arrangement arrangement = chartData.getCurrentArrangement();
-
-		final HashMap2<String, Phrase> copiedPhrases = arrangement.phrases.map(phraseName -> phraseName, Phrase::new);
-		final ArrayList2<CopiedArrangementEventsPointPosition> copiedArrangementEventsPoints = copyPositionsFromTo(from,
-				to, basePositionInBeats, arrangement.eventPoints, CopiedArrangementEventsPointPosition::new);
+		final Map<String, Phrase> copiedPhrases = map(arrangement.phrases, phraseName -> phraseName, Phrase::new);
+		final List<CopiedEventPoint> copiedArrangementEventsPoints = copyPositionsFromTo(from, to,
+				arrangement.eventPoints, CopiedEventPoint::new);
 
 		final ICopyData copyData = new EventPointsCopyData(copiedPhrases, copiedArrangementEventsPoints);
 		return new CopyData(copyData, getFullCopyData(from, to));
 	}
 
 	private CopyData getGuitarCopyDataGuitarNotes() {
-		final SelectionAccessor<ChordOrNote> selectedSoundsAccessor = selectionManager
-				.getSelectedAccessor(PositionType.GUITAR_NOTE);
-		final ArrayList2<Selection<ChordOrNote>> selectedSounds = selectedSoundsAccessor.getSortedSelected();
+		final List<ChordOrNote> selected = selectionManager.getSelectedElements(PositionType.GUITAR_NOTE);
 
-		final ArrayList2<ChordTemplate> copiedChordTemplates = chartData.getCurrentArrangement().chordTemplates
-				.map(ChordTemplate::new);
-		final ArrayList2<CopiedSoundPosition> copiedSounds = makeCopy(selectedSounds, CopiedSoundPosition::new);
-		final int from = selectedSounds.get(0).selectable.position();
-		final int to = selectedSounds.getLast().selectable.position();
+		final List<ChordTemplate> copiedChordTemplates = chartData.currentArrangement().chordTemplates//
+				.stream().map(ChordTemplate::new).collect(Collectors.toList());
+		final List<CopiedSound> copiedSounds = makeCopy(selected, CopiedSound::copy);
+		final FractionalPosition from = selected.get(0).position();
+		final FractionalPosition to = selected.get(selected.size() - 1).endPosition().position();
 
 		final ICopyData copyData = new SoundsCopyData(copiedChordTemplates, copiedSounds);
 		return new CopyData(copyData, getFullCopyData(from, to));
 	}
 
 	private CopyData getGuitarCopyDataHandShapes() {
-		final SelectionAccessor<HandShape> selectedHandShapesAccessor = selectionManager
-				.getSelectedAccessor(PositionType.HAND_SHAPE);
-		final ArrayList2<Selection<HandShape>> selectedHandShapes = selectedHandShapesAccessor.getSortedSelected();
+		final List<HandShape> selectedHandShapes = selectionManager.getSelectedElements(PositionType.HAND_SHAPE);
 
-		final ArrayList2<ChordTemplate> copiedChordTemplates = chartData.getCurrentArrangement().chordTemplates
-				.map(ChordTemplate::new);
-		final ArrayList2<CopiedHandShapePosition> copiedHandShapes = makeCopy(selectedHandShapes,
-				CopiedHandShapePosition::new);
-		final int from = selectedHandShapes.get(0).selectable.position();
-		final int to = selectedHandShapes.getLast().selectable.position();
+		final List<ChordTemplate> copiedChordTemplates = map(chartData.currentChordTemplates(), ChordTemplate::new);
+		final List<CopiedHandShape> copiedHandShapes = makeCopy(selectedHandShapes, CopiedHandShape::new);
+		final FractionalPosition from = selectedHandShapes.get(0).position();
+		final FractionalPosition to = selectedHandShapes.get(selectedHandShapes.size() - 1).endPosition().position();
 
 		final ICopyData copyData = new HandShapesCopyData(copiedChordTemplates, copiedHandShapes);
 		return new CopyData(copyData, getFullCopyData(from, to));
 	}
 
-	private <T extends IPosition, V extends CopiedPosition<T>> CopyData getCopyData(final PositionType type,
-			final CopiedPositionMaker<T, V> copiedPositionMaker,
-			final Function<ArrayList2<V>, ICopyData> copyDataMaker) {
-		final SelectionAccessor<T> selectionAccessor = selectionManager.getSelectedAccessor(type);
+	private <T extends IConstantFractionalPositionWithEnd, V extends Copied<T>> CopyData getCopyDataWithEnd(
+			final PositionType type, final CopyMakerSimple<T, V> copiedPositionMaker,
+			final Function<List<V>, ICopyData> copyDataMaker) {
+		final ISelectionAccessor<T> selectionAccessor = selectionManager.accessor(type);
 		if (!selectionAccessor.isSelected()) {
 			return null;
 		}
 
-		final ArrayList2<Selection<T>> selectedVocals = selectionAccessor.getSortedSelected();
-		final ArrayList2<V> copiedVocals = makeCopy(selectedVocals, copiedPositionMaker);
+		final List<T> selected = selectionAccessor.getSelectedElements();
+		final List<V> copied = makeCopy(selected, copiedPositionMaker);
 
-		final int from = selectedVocals.get(0).selectable.position();
-		final int to = selectedVocals.getLast().selectable.position();
+		final FractionalPosition from = selected.get(0).position();
+		final FractionalPosition to = selected.get(selected.size() - 1).endPosition();
 
 		final FullCopyData fullCopyData = getFullCopyData(from, to);
 
-		return new CopyData(copyDataMaker.apply(copiedVocals), fullCopyData);
+		return new CopyData(copyDataMaker.apply(copied), fullCopyData);
+	}
+
+	private <T extends IConstantFractionalPosition, V extends Copied<T>> CopyData getCopyData(final PositionType type,
+			final CopyMakerSimple<T, V> copiedPositionMaker, final Function<List<V>, ICopyData> copyDataMaker) {
+		final ISelectionAccessor<T> selectionAccessor = selectionManager.accessor(type);
+		if (!selectionAccessor.isSelected()) {
+			return null;
+		}
+
+		final List<T> selected = selectionAccessor.getSelectedElements();
+		final List<V> copied = makeCopy(selected, copiedPositionMaker);
+
+		final FractionalPosition from = selected.get(0).position();
+		final FractionalPosition to = selected.get(selected.size() - 1).position();
+
+		final FullCopyData fullCopyData = getFullCopyData(from, to);
+
+		return new CopyData(copyDataMaker.apply(copied), fullCopyData);
 	}
 
 	private CopyData getGuitarCopyData() {
-		if (selectionManager.getSelectedAccessor(PositionType.ANCHOR).isSelected()) {
-			return getCopyData(PositionType.ANCHOR, CopiedAnchorPosition::new, AnchorsCopyData::new);
+		if (selectionManager.accessor(PositionType.ANCHOR).isSelected()) {
+			return getCopyData(PositionType.ANCHOR, CopiedAnchor::new, AnchorsCopyData::new);
 		}
-		if (selectionManager.getSelectedAccessor(PositionType.EVENT_POINT).isSelected()) {
+		if (selectionManager.accessor(PositionType.EVENT_POINT).isSelected()) {
 			return getGuitarCopyDataEventPoints();
 		}
-		if (selectionManager.getSelectedAccessor(PositionType.GUITAR_NOTE).isSelected()) {
+		if (selectionManager.accessor(PositionType.GUITAR_NOTE).isSelected()) {
 			return getGuitarCopyDataGuitarNotes();
 		}
-		if (selectionManager.getSelectedAccessor(PositionType.HAND_SHAPE).isSelected()) {
+		if (selectionManager.accessor(PositionType.HAND_SHAPE).isSelected()) {
 			return getGuitarCopyDataHandShapes();
 		}
-		if (selectionManager.getSelectedAccessor(PositionType.TONE_CHANGE).isSelected()) {
-			return getCopyData(PositionType.TONE_CHANGE, CopiedAnchorPosition::new, AnchorsCopyData::new);
+		if (selectionManager.accessor(PositionType.TONE_CHANGE).isSelected()) {
+			return getCopyData(PositionType.TONE_CHANGE, CopiedAnchor::new, AnchorsCopyData::new);
 		}
 
 		return null;
@@ -222,7 +204,7 @@ public class CopyManager {
 			case GUITAR:
 				return getGuitarCopyData();
 			case VOCALS:
-				return getCopyData(PositionType.VOCAL, CopiedVocalPosition::new, VocalsCopyData::new);
+				return getCopyDataWithEnd(PositionType.VOCAL, CopiedVocalPosition::new, VocalsCopyData::new);
 			case TEMPO_MAP:
 			default:
 				return null;
@@ -257,17 +239,76 @@ public class CopyManager {
 		}
 	}
 
+	private void pasteVocals(final CopyData copyData) {
+		final ICopyData selectedCopy = copyData.selectedCopy;
+		if (selectedCopy.isEmpty() || selectedCopy.type() != PositionType.VOCAL) {
+			return;
+		}
+
+		undoSystem.addUndo();
+		selectionManager.clear();
+		selectedCopy.paste(chartData, selectionManager, chartTimeHandler.timeFractional(), true);
+	}
+
+	private void pasteGuitar(final CopyData copyData) {
+		final ICopyData selectedCopy = copyData.selectedCopy;
+		if (selectedCopy.isEmpty()) {
+			return;
+		}
+		switch (selectedCopy.type()) {
+			case EVENT_POINT:
+			case TONE_CHANGE:
+			case ANCHOR:
+			case GUITAR_NOTE:
+			case HAND_SHAPE:
+				break;
+			case NONE:
+			case BEAT:
+			case VOCAL:
+			default:
+				return;
+		}
+
+		undoSystem.addUndo();
+		selectionManager.clear();
+
+		final FractionalPosition currentTime = chartTimeHandler.timeFractional();
+		if (selectedCopy.type() == PositionType.GUITAR_NOTE) {
+			final FullCopyData fullCopy = copyData.fullCopy;
+			if (fullCopy instanceof FullGuitarCopyData) {
+				final FullGuitarCopyData fullGuitarCopyData = (FullGuitarCopyData) fullCopy;
+				fullGuitarCopyData.toneChanges.paste(chartData, selectionManager, currentTime, true);
+				fullGuitarCopyData.anchors.paste(chartData, selectionManager, currentTime, true);
+				fullGuitarCopyData.handShapes.paste(chartData, selectionManager, currentTime, true);
+			}
+
+			selectedCopy.paste(chartData, selectionManager, currentTime, true);
+		} else {
+			selectedCopy.paste(chartData, selectionManager, currentTime, true);
+		}
+	}
+
 	public void paste() {
+		if (modeManager.getMode() == EditMode.EMPTY || modeManager.getMode() == EditMode.TEMPO_MAP) {
+			return;
+		}
+
 		final CopyData copyData = getDataFromClipboard();
 		if (copyData == null || copyData.selectedCopy == null) {
 			return;
 		}
 
-		final ICopyData selectedCopy = copyData.selectedCopy;
-		if (selectedCopy.isEmpty()) {
+		if (modeManager.getMode() == EditMode.VOCALS) {
+			pasteVocals(copyData);
 			return;
 		}
-		if (modeManager.getMode() == EditMode.TEMPO_MAP) {
+		if (modeManager.getMode() == EditMode.GUITAR) {
+			pasteGuitar(copyData);
+			return;
+		}
+
+		final ICopyData selectedCopy = copyData.selectedCopy;
+		if (selectedCopy.isEmpty()) {
 			return;
 		}
 
@@ -279,7 +320,7 @@ public class CopyManager {
 
 		undoSystem.addUndo();
 		selectionManager.clear();
-		selectedCopy.paste(chartData, selectionManager, chartTimeHandler.time(), true);
+		selectedCopy.paste(chartData, selectionManager, chartTimeHandler.timeFractional(), true);
 	}
 
 	public void specialPaste() {
@@ -294,8 +335,8 @@ public class CopyManager {
 		}
 
 		if (fullCopy instanceof FullGuitarCopyData) {
-			new GuitarSpecialPastePane(chartData, charterFrame, selectionManager, undoSystem, chartTimeHandler.time(),
-					(FullGuitarCopyData) fullCopy);
+			new GuitarSpecialPastePane(chartData, charterFrame, selectionManager, undoSystem,
+					chartTimeHandler.timeFractional(), (FullGuitarCopyData) fullCopy);
 			return;
 		}
 	}
